<resources>
    <string name="app_name">Calculator</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="plus_sign">+</string>
    <string name="minus_sign">-</string>
    <string name="multiply_sign">x</string>
    <string name="division_sign">÷</string>
    <string name="decimal_sign">.</string>
    <string name="delete">DEL</string>
    <string name="percent">%</string>
    <string name="equals_sign">=</string>
    <string name="neg_and_positive">+/-</string>
    <string name="clear">AC</string>

    <string name="sq_root">√</string>
    <string name="exponent">x^y</string>
    <string name="pi">\u03c0</string>
</resources>
