<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical">


    <EditText
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.01"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="numberSigned|numberDecimal"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/new_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_weight="1"
        android:background="@color/black"
        android:inputType="numberSigned|numberDecimal"
        android:textAlignment="viewEnd"
        android:textColor="@color/white"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/operation"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@color/black"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="normal|bold" />

    <!--  Top row -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/notNumberColor"

            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/delete"
            android:textSize="21sp" />

        <Button
            android:id="@+id/neg_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/notNumberColor"

            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/neg_and_positive"
            android:textSize="21sp" />

        <Button
            android:id="@+id/percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/notNumberColor"

            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/percent"
            android:textSize="21sp" />

        <Button
            android:id="@+id/division_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/notNumberColor"

            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/division_sign"
            android:textSize="21sp" />

    </LinearLayout>


    <!-- 7 through X -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/num7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/dipset"

            android:elevation="0dp"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/seven"
            android:textAllCaps="false"
            android:textSize="21sp" />

        <Button
            android:id="@+id/num8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/dipset"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/eight"
            android:textSize="21sp" />

        <Button
            android:id="@+id/num9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/dipset"

            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/nine"
            android:textSize="21sp" />

        <Button
            android:id="@+id/multiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/notNumberColor"

            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/multiply_sign"
            android:textSize="21sp" />


    </LinearLayout>

    <!-- 4 through - -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/num4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/dipset"

            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/four"
            android:textSize="21sp" />

        <Button
            android:id="@+id/num5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/dipset"

            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/five"
            android:textSize="21sp" />

        <Button
            android:id="@+id/num6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/dipset"

            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/six"
            android:textSize="21sp" />

        <Button
            android:id="@+id/minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/notNumberColor"

            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/minus_sign"
            android:textSize="21sp" />

    </LinearLayout>

    <!-- 1 through + -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/num1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/dipset"

            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/one"
            android:textSize="21sp" />

        <Button
            android:id="@+id/num2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/dipset"

            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/two"
            android:textSize="21sp" />

        <Button
            android:id="@+id/num3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/dipset"

            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/three"
            android:textSize="21sp" />

        <Button
            android:id="@+id/addition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/notNumberColor"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/plus_sign"
            android:textSize="21sp" />

    </LinearLayout>

    <!-- . through = -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/dipset"

            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/decimal_sign"
            android:textSize="21sp" />

        <Button
            android:id="@+id/num0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/dipset"

            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/zero"
            android:textSize="21sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/dipset"

            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:textSize="21sp" />

        <Button
            android:id="@+id/equals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/notNumberColor"

            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/equals_sign"
            android:textSize="21sp" />


    </LinearLayout>


</LinearLayout>
